<resources>
    <string name="app_name">RealEstateManager</string>
    //bottom menu
    <string name="bottom_map">Map</string>
    <string name="bottom_list">List</string>
    //option menu
    <string name="menu_add_agent">Add agent</string>
    <string name="menu_add_property">Add a new propertie</string>
    <string name="menu_search">Search</string>
    <string name="menu_edit">Edit</string>
    //alert dialog
    <string name="dialog_leave_title">Exit</string>
    <string name="dialog_leave_message">You want close RealEstateManager?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    //spinner prompt
    <string name="spinner_agent">Agent</string>
    <string name="spinner_type">Type</string>
    //string add properties
    <string name="type">Type :</string>
    <string name="price">Price</string>
    <string name="surface">Surface</string>
    <string name="room">Number Room</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="type_way">Type Way</string>
    <string name="num_way">Num Way</string>
    <string name="name_way">Name Way</string>
    <string name="complement">Complement</string>
    <string name="description">Description</string>
    <string name="agent">Agent</string>
    <string name="state">State</string>
    <string name="estate">Estate</string>
    <string name="nearby">Nearby :</string>
    <string name="new_property">Add a new properties</string>
    <string name="add_photo">Add photo</string>
    <string name="select_address">Select Address</string>
    //checkbox
    <string name="school">School</string>
    <string name="parc">Parc</string>
    <string name="shopping">Shopping</string>
    <string name="transport">Transports</string>
    <string name="sports">Sports</string>
    //add new agent
    <string name="add_new_agent">Add a new agent</string>
    <string name="name_agent">Name</string>
    <string name="email_agent">Email</string>
    //toast alert
    <string name="complete_all_informations">Complete all informations</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="create_agent">Create agent before</string>
    <string name="title_activity_maps">Map</string>
    //title activity/fragment
    <string name="add_property">Add Property</string>
    //details property
    <string name="opinion_agent">The opinion of the professional :</string>
    <string name="nearby_point">Nearby point :</string>
    <string name="location">Location :</string>
    <string name="date_sale">Put on sale :</string>
    <string name="sold">SOLD</string>
    <string name="no_property">No property in database or no result for your filters. Please create property or change filters.</string>
    <string name="edit_title">Edit property</string>
    //notification
    <string name="title_notif">Property Created</string>
    <string name="body_notif">Property has been created</string>
    <string name="property_sold">The property has been sold?</string>
    <string name="sold_the">Sold the :</string>

    //simulator
    <string name="loan">Loan Calculator</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_term">Loan Term</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="bring">Bring Amount</string>
    <string name="in_years">in years</string>
    <string name="calculate">Calculate</string>
    <string name="total_cost">Total Cost Loan :</string>
    <string name="payment_mont">Payment Every Month :</string>
    <string name="total_interest">Total Interests :</string>
    <string name="convert">Convert</string>

    //search dialog
    <string name="no_filter">No Filter</string>
    <string name="filter">Apply Filter</string>
    <string name="location_helper">State, City, Postal Code…</string>
    <string name="min_surface">Min surface</string>
    <string name="max_surface">Max surface</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="min_room">Min room</string>
    <string name="max_room">Max room</string>
    <string name="title_dialog">Filter</string>
    <string name="sold_since">Sold since :</string>
    <string name="sale_since">Sale since :</string>
    <string name="house">HOUSE</string>
    <string name="apartment">APARTMENT</string>
    <string name="studio">STUDIO</string>
    <string name="villa">VILLA</string>

    //api key
    <string name="api_key_maps">AIzaSyC7VWXxeOgJAg5XoJdRRcldT6uNxtHMq2o</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
